add staging domain

--- a/Services/nginx/sites/default.conf
+++ b/Services/nginx/sites/default.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+    listen [::]:80;
+    server_name geekc.ru;
+    
     index index.php index.html;
     root /var/www/html/monolith/public;
 
